--- a/src/EfTeams/EfTeams.Data/EfTeams.Data.csproj
+++ b/src/EfTeams/EfTeams.Data/EfTeams.Data.csproj
@@ -5,12 +5,23 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20211020061027_Initial_Migrationv2.cs" />
+    <Compile Remove="Migrations\20211020061027_Initial_Migrationv2.Designer.cs" />
+    <Compile Remove="Migrations\20211020061142_Initial_Migrationv.cs" />
+    <Compile Remove="Migrations\20211020061142_Initial_Migrationv.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.9">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
