created addPlayerAsync endpoint

--- a/src/EfTeams/EfTeams.Api/EfTeams.Api.csproj
+++ b/src/EfTeams/EfTeams.Api/EfTeams.Api.csproj
@@ -16,7 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EfTeams.Data\EfTeams.Data.csproj" />
-    <ProjectReference Include="..\EfTeams.Services\EfTeams.Services.csproj" />
+    <ProjectReference Include="..\EfTeams.Services\EfTeams.Repositories.csproj" />
   </ItemGroup>
 
 </Project>
