--- a/src/EfTeams/EfTeams.Business/EfTeams.Business.csproj
+++ b/src/EfTeams/EfTeams.Business/EfTeams.Business.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EfTeams.Services\EfTeams.Services.csproj" />
+    <ProjectReference Include="..\EfTeams.Services\EfTeams.Repositories.csproj" />
   </ItemGroup>
 
 </Project>
