Creating transaction endpoint

--- a/src/EfTeams/EfTeams.Api/EfTeams.Api.csproj
+++ b/src/EfTeams/EfTeams.Api/EfTeams.Api.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\EfTeams.Business\EfTeams.Business.csproj" />
     <ProjectReference Include="..\EfTeams.Data\EfTeams.Data.csproj" />
     <ProjectReference Include="..\EfTeams.Services\EfTeams.Repositories.csproj" />
   </ItemGroup>
