Adding unit test

--- a/src/EfTeams/EfTeams.Business/EfTeams.Business.csproj
+++ b/src/EfTeams/EfTeams.Business/EfTeams.Business.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.9" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\EfTeams.Services\EfTeams.Repositories.csproj" />
   </ItemGroup>
 
